use modern java accumulators